# movie-rag-system

./: .gitignore  QUICK_START.md  README.md  docker-compose.yml  main.py  pyproject.toml  run_streamlit.py
src/movie_rag/: __init__.py  app.py
src/movie_rag/core/: movie_rag_enhanced.py  movie_rag_system.py  qa_chain_manager.py  vectorstore_manager.py
src/movie_rag/data/: movie_data_collector.py
src/movie_rag/models/: database.py
tests/: test_docker_chromadb.py  test_e2e.py  test_integration.py  test_postgres_rag.py  test_quick.py
